# AIA-Forecaster-CC

./: .env.example  .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml  research.md
company.example/: README.md  __init__.py  config.py  consensus.py  consensus_sample.py  llm.py  pairs.py
company.example/search/: __init__.py  bloomberg.py  brave.py
data/forecasts/: USDJPY_2026-02-13.json  USDJPY_2026-02-15.json  USDJPY_2026-02-17.json  USDJPY_2026-02-18.json  USDJPY_2026-02-19_above.json  USDJPY_2026-02-20_above_rss+web.json  USDJPY_2026-02-21_above.json  USDJPY_causal_test.json  USDJPY_causal_v2.json  USDJPY_causal_v3.json  USDJPY_causal_v4.json  USDJPY_debug.json  USDJPY_debug2.json
src/aia_forecaster/: __init__.py  config.py  main.py  models.py
src/aia_forecaster/agents/: __init__.py  forecaster.py  supervisor.py
src/aia_forecaster/calibration/: __init__.py  monotonicity.py  platt.py
src/aia_forecaster/ensemble/: __init__.py  engine.py
src/aia_forecaster/evaluation/: metrics.py
src/aia_forecaster/fx/: __init__.py  base_rates.py  compare.py  explanation.py  pairs.py  pdf_report.py  rates.py  surface.py
src/aia_forecaster/llm/: __init__.py  client.py
src/aia_forecaster/search/: __init__.py  bis.py  foreknowledge.py  llm_relevance.py  registry.py  relevance.py  rss.py  web.py  web_providers.py
tests/: test_base_rates.py  test_calibration.py  test_ensemble.py  test_explanation.py  test_hitting_mode.py  test_llm_relevance.py  test_models.py  test_monotonicity.py  test_relevance.py  test_rss_feeds.py  test_search.py
(+6 files in other folders)
