[tool.poetry]
name = "aia-forecaster"
version = "0.1.0"
description = "AIA Forecaster adapted for FX probability forecasting"
authors = []
readme = "README.md"
packages = [{include = "aia_forecaster", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.3"
langchain-core = "^0.3"
duckduckgo-search = "^7.0"
feedparser = "^6.0"
httpx = "^0.28"
pydantic = "^2.0"
pydantic-settings = "^2.0"
rich = "^13.0"
python-dotenv = "^1.0"
matplotlib = "^3.10.8"
plotly = "^6.0"
yfinance = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.24"
ruff = "^0.8"

[tool.poetry.scripts]
forecast = "aia_forecaster.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
